Fix notification icon is always active on mobile, Closes #165

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -4102,7 +4102,6 @@ body .compose-form .compose-form__uploads {
   background-image: var(--icon-bell);
 }
 
-.layout-multiple-columns .active .icon.icon-bell,
 .layout-multiple-columns .column-link.active .icon-bell {
   background-image: var(--icon-bell-active);
 }
